created reusable templates, increased text size, added plot captions

--- a/hawc/apps/mgmt/templates/mgmt/analytics.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics.html
@@ -22,17 +22,17 @@
   <div class="tab-pane fade show active" id="about" role="tabpanel">
     This is the Assessment Analytics home page. From here, you can navigate to the different tabs to learn more about your assessment. Responses are cached for one hour.
     <br></br>
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-around">
       <div class="text-center">
-        <h4>Check assessment growth</h5>
+        <h3>Check assessment growth</h3>
         <i class="fa fa-line-chart fa-3x"></i>
       </div>
       <div class="text-center">
-        <h4>Find available types of content</h5>
+        <h3>Find available types of content</h3>
         <i class="fa fa-search fa-3x"></i>
       </div>
       <div class="text-center">
-        <h4>Discover how it has changed over time</h5>
+        <h3>Discover changes over time</h3>
         <i class="fa fa-clock-o fa-3x"></i>
       </div>
     </div>
