--- a/hawc/apps/mgmt/templates/mgmt/analytics/time_series.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/time_series.html
@@ -1,28 +1,8 @@
 {% block content %}
 <div class="card-columns">
-    <div class="card box-shadow">
-        <div class="card-body">
-            <h5 class="card-title text-center">Number of visuals created by year</h5>
-            <div>{% plotly visuals_per_year event='htmx' %}</div>
-        </div>
-    </div>
-    <div class="card box-shadow">
-        <div class="card-body">
-            <h5 class="card-title text-center">Number of Data Pivots created by year</h5>
-            <div>{% plotly datapivots_per_year event='htmx' %}</div>
-        </div>
-    </div>
-    <div class="card box-shadow">
-        <div class="card-body">
-            <h5 class="card-title text-center">Visuals and Data Pivots created</h5>
-            <div>{% plotly total_visuals event='htmx' %}</div>
-        </div>
-    </div>
-    <div class="card box-shadow">
-        <div class="card-body">
-            <h5 class="card-title text-center">References created over time</h5>
-            <div>{% plotly refs_per_month event='htmx' %}</div>
-        </div>
-    </div>
+    {% include 'common/analytics_plot.html' with title='Number of visuals created by year' plot=visuals_per_year %}
+    {% include 'common/analytics_plot.html' with title='Number of data pivots created by year' plot=datapivots_per_year %}
+    {% include 'common/analytics_plot.html' with title='Total visuals and data pivots created' plot=total_visuals %}
+    {% include 'common/analytics_plot.html' with title='References created over time' plot=refs_per_month %}
 </div>
 {% endblock %}
