centered plot caption

--- a/hawc/apps/common/templates/common/analytics_plot.html
+++ b/hawc/apps/common/templates/common/analytics_plot.html
@@ -2,6 +2,6 @@
     <div class="card-body">
         <h3 class="text-center">{{ title }}</h3>
         <div>{% plotly plot event="htmx" %}</div>
-        <p class="text-muted"> {{ caption }}</p>
+        <p class="text-muted text-center"> {{ caption }}</p>
     </div>
 </div>
