--- a/hawc/apps/hawc_admin/templates/admin/fragments/assessment_profile.html
+++ b/hawc/apps/hawc_admin/templates/admin/fragments/assessment_profile.html
@@ -1,6 +1,6 @@
 <div hx-target="this" hx-swap="outerHTML">
     <h2>Assessment profile</h2>
-    <form hx-post="{% url 'admin_dashboard' %}?action=assessment_profile" hx-trigger="change">
+    <form hx-get="{% url 'admin_dashboard' %}?action=assessment_profile" hx-trigger="change">
         {{ form.as_p }}
         {% csrf_token %}
     </form>
