--- a/hawc/apps/lit/templates/lit/reference_extract_list.html
+++ b/hawc/apps/lit/templates/lit/reference_extract_list.html
@@ -6,7 +6,7 @@
     <p class="text-muted">Select one or more references from the list below:</p>
     {% if object_list.count > 0 %}
         <form method="post">
-            <ul class="list-group my-3">
+            <ul class="list-group my-3 vw75">
             {% for object in object_list %}
                     <li class="list-group-item d-flex col">
                         <div class="col-auto d-flex align-content-center pl-4 pr-5">  
