--- a/hawc/apps/animal/templates/animal/endpoint_detail.html
+++ b/hawc/apps/animal/templates/animal/endpoint_detail.html
@@ -42,6 +42,7 @@
     <div id="dr-details" class="col-md-7">
       <h3>Endpoint Details</h3>
       <div id="endpoint-details-table"></div>
+      {% include "udf/fragments/_udf_content.html" with object=udf_content %}
 
       <h3>Dataset</h3>
       <table id="dr-tbl" class="table table-sm table-striped"></table>
