--- a/hawc/apps/udf/templates/udf/fragments/_udf_content.html
+++ b/hawc/apps/udf/templates/udf/fragments/_udf_content.html
@@ -1,3 +1,4 @@
+{% if object %}
 <h3>User defined fields</h3>
 <table class="table table-sm m-0 noborder">
     <colgroup>
@@ -19,3 +20,4 @@
         {% endfor %}
     </tbody>
 </table>
+{% endif %}
