Update animal dose response plots (#780)
* wrap titles so they're not too long

* change default plot based on dataset type

* add buffer around plot

* change axis info based on if data are dichotomous

* remove domain buffer logic since we are using range instead

* wip

* final pass updates

* reduce error bar width; improve point coloring

* fix bottom right legend location; fix dragging

* fix issue with lines not showing for dichotomous plots

* move legend to top left

* (unrelated) add tag padding

* fix bmd bug with missing data

* fix overlap

* fix broken BMD line rendering

* minor edit

---------

Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>

--- a/hawc/static/css/d3.css
+++ b/hawc/static/css/d3.css
@@ -66,11 +66,8 @@ svg {
 /* dose-response data points */
 .dose_points {
     fill: #a8b2d3;
-    stroke: black;
-    stroke-width: 1.5px;
-}
-.dose_points:hover {
-    fill: yellow;
+    stroke: white;
+    stroke-width: 1px;
 }
 
 /* critical dose points */
