standardize copy views (#799)
* wip

* fix table

* clone

* udpates

* remove todo

* complete lit and animal

* fix epi clones

* fix meta result

* fix table and visual clone

* fix datapivot copy form

* use common copy selector template

---------

Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>

--- a/hawc/apps/animal/templates/animal/experiment_detail.html
+++ b/hawc/apps/animal/templates/animal/experiment_detail.html
@@ -12,7 +12,7 @@
             <div class="dropdown-divider"></div>
             <span class="dropdown-header">Animal Group Editing</span>
             <a class="dropdown-item" href="{% url 'animal:animal_group_new' object.pk %}">Create new</a>
-            <a class="dropdown-item" href="{% url 'animal:animal_group_copy_selector' object.pk %}">Copy from existing</a>
+            <a class="dropdown-item" href="{% url 'animal:animal_group_copy' object.pk %}">Copy from existing</a>
         {% endactions %}
       {% endif %}
     </div>
