--- a/hawc/apps/animal/templates/animal/animalgroup_detail.html
+++ b/hawc/apps/animal/templates/animal/animalgroup_detail.html
@@ -20,7 +20,7 @@
         <div class="dropdown-divider"></div>
         <span class="dropdown-header">Endpoint Editing</span>
         <a class="dropdown-item" href="{% url 'animal:endpoint_new' object.pk %}">Create new</a>
-        <a class="dropdown-item" href="{% url 'animal:endpoint_copy_selector' object.pk %}">Copy from existing</a>
+        <a class="dropdown-item" href="{% url 'animal:endpoint_copy' object.pk %}">Copy from existing</a>
       {% endactions %}
     {% endif %}
   </div>
