--- a/hawc/apps/epi/templates/epi/outcome_detail.html
+++ b/hawc/apps/epi/templates/epi/outcome_detail.html
@@ -12,12 +12,12 @@
           <div class="dropdown-divider"></div>
           <span class="dropdown-header">Results</span>
           <a class="dropdown-item" href="{% url 'epi:result_create' object.pk %}">Create</a>
-          <a class="dropdown-item" href="{% url 'epi:result_copy_selector' object.pk %}">Copy as new</a>
+          <a class="dropdown-item" href="{% url 'epi:result_copy' object.pk %}">Copy as new</a>
           {% if object.can_create_sets %}
             <div class="dropdown-divider"></div>
             <span class="dropdown-header">Comparison sets</span>
             <a class="dropdown-item" href="{% url 'epi:cs_outcome_create' object.pk %}">Create</a>
-            <a class="dropdown-item" href="{% url 'epi:cs_outcome_copy_selector' object.pk %}">Copy from existing</a>
+            <a class="dropdown-item" href="{% url 'epi:cs_outcome_copy' object.pk %}">Copy from existing</a>
           {% endif %}
         {% endactions %}
       {% endif %}
