--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -24,7 +24,7 @@
                 <div class="dropdown-divider"></div>
                 <span class="dropdown-header">Animal bioassay editing</span>
                 <a class="dropdown-item" href="{% url 'animal:experiment_new' object.pk %}">Create new experiment</a>
-                <a class="dropdown-item" href="{% url 'animal:experiment_copy_selector' object.pk %}">Copy from existing</a>
+                <a class="dropdown-item" href="{% url 'animal:experiment_copy' object.pk %}">Copy from existing</a>
               {% endif %}
 
               {% if object.in_vitro %}
@@ -40,7 +40,7 @@
                 <span class="dropdown-header">Epidemiology editing</span>
                 {% if assessment.epi_version == 1 %}
                   <a class="dropdown-item" href="{% url 'epi:sp_create' object.pk %}">Create new study population</a>
-                  <a class="dropdown-item" href="{% url 'epi:sp_copy_selector' object.pk %}">Copy from existing</a>
+                  <a class="dropdown-item" href="{% url 'epi:sp_copy' object.pk %}">Copy from existing</a>
                 {% elif assessment.epi_version == 2 %}
                   <a class="dropdown-item" href="{% url 'epiv2:design_create' object.pk %}">Create new study population</a>
                 {% endif %}
