--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -40,7 +40,7 @@
           "cancel_url": "{% if crud == "Create" %}{% url 'summary:visualization_list' pk=assessment.id %}{% else %}{{object.get_absolute_url}}{% endif %}",
           "data_url": "{% url 'summary:api:visual-list' %}",
           "endpoint_url": "{% url 'autocomplete' 'animal-endpointautocomplete' %}",
-          "preview_url": "{% url 'summary:visualization_create_tester' assessment.id visual_type %}",
+          "preview_url": "{% url 'summary:visualization_create_tester' assessment.id visual_type evidence_type %}",
           "rob_metrics": {{rob_metrics|safe}},
           "initial_data": {{initial_data|safe}},
           "api_heatmap_datasets": "{{form.instance.get_api_heatmap_datasets}}",
