--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -76,6 +76,10 @@
             {% url 'animal:api:assessment-endpoint-export' assessment.pk as the_url %}
             {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-summary' button_text='Endpoint Summary' help_text="Endpoint-summary animal data." %}
           </li>
+          <li class="list-group-item">
+            {% url 'animal:api:assessment-study-heatmap' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-study-summary' button_text='Study Summary' help_text="Study-summary animal data." %}
+          </li>
           {% endif %}
         </ul>
       </div>
@@ -89,18 +93,31 @@
       <h3 class="card-header">Epidemiology</h3>
       <div class="card-body p-0">
         <ul class="list-group list-group-flush">
+          {% if not assessment.has_epi_data %}
           <li class="list-group-item">
-            {% if not assessment.has_epi_data %}
             <p class="text-muted">No data available.</p>
-            {% else %}
-            {% if assessment.epi_version == EpiVersion.V1 %}
-            {% url 'epi:api:assessment-export' assessment.pk as the_url %}
-            {% elif assessment.epi_version == EpiVersion.V2 %}
-            {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
-            {% endif %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="All epidemiology data." %}
-            {% endif %}
           </li>
+          {% else %}
+          {% if assessment.epi_version == EpiVersion.V1 %}
+          <li class="list-group-item">
+            {% url 'epi:api:assessment-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="All epidemiology data." %}
+          </li>
+          <li class="list-group-item">
+            {% url 'epi:api:assessment-study-heatmap' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' button_text='Study Design' help_text="Epidemiology study design data." %}
+          </li>
+          {% elif assessment.epi_version == EpiVersion.V2 %}
+          <li class="list-group-item">
+            {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="All epidemiology data." %}
+          </li>
+          <li class="list-group-item">
+            {% url 'epiv2:api:assessment-study-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' button_text='Study Design' help_text="Epidemiology study design data." %}
+          </li>
+          {% endif %}
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -147,13 +164,20 @@
       <h3 class="card-header">Ecological</h3>
       <div class="card-body p-0">
         <ul class="list-group list-group-flush">
+          {% if not assessment.has_eco_data %}
           <li class="list-group-item">
-            {% if not assessment.has_eco_data %}
             <p class="text-muted">No data available.</p>
-            {% else %}
+          </li>
+          {% else %}
+          <li class="list-group-item">
             {% url 'eco:api:assessment-export' assessment.pk as the_url %}
             {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." %}
-            {% endif %}
+          </li>
+          <li class="list-group-item">
+            {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." %}
+          </li>
+          {% endif %}
           </li>
         </ul>
       </div>
