--- a/hawc/apps/lit/templates/lit/conflict_resolution.html
+++ b/hawc/apps/lit/templates/lit/conflict_resolution.html
@@ -5,10 +5,10 @@
 <div class="d-flex">
     <h2>Resolve Tag Conflicts</h2>
     {% actions %}
-    <a class="dropdown-item" data-toggle="modal" data-target="#bulk_merge_form">Bulk Merge Conflicts</a>
+    <a class="dropdown-item" data-toggle="modal" data-target="#bulk-merge-modal" hx-get="{% url 'lit:bulk-merge-conflicts' assessment.pk %}" hx-target="#modal-content">Bulk Merge Conflicts</a>
     {% endactions %}
 </div>
-{% include "lit/bulk_merge_modal.html" with modal_id='bulk_merge_form' modal_size='modal-lg' %}
+{% include "lit/_bulk_merge_modal.html" %}
 {% include 'common/inline_filter_form.html' %}
 <ul class="list-group list-group-flush my-3">
     {% for ref in object_list %}
