--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -803,6 +803,16 @@ table.bordered td {
     opacity: 0;
     transition: opacity 1s ease-out;
 }
+.htmx-indicator {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
+}
+.htmx-request .htmx-indicator{
+    opacity:1
+}
+.htmx-request.htmx-indicator{
+    opacity:1
+}
 
 /* fade in/out */
 .fade-in-out {
