--- a/hawc/apps/common/templates/common/modal_template.html
+++ b/hawc/apps/common/templates/common/modal_template.html
@@ -1,3 +1,4 @@
+{% block pre_modal %}{% endblock pre_modal %}
 <div id="{{ modal_id }}" class="modal fade" data-backdrop="static" tabindex="-1" aria-labelledby="{{ modal_id }}-label" aria-hidden="true">
     <div class="modal-dialog {% if modal_size %} {{modal_size}} {% else %} modal-xl {% endif %}modal-dialog-scrollable" role="document">
         <div class="modal-content">
@@ -11,7 +12,7 @@
                 </button>
                 {% endblock modal_header %}
             </div>
-            <div class="modal-body">
+            <div class="modal-body {{modal_body_class}}">
                 {% block modal_body %}
                 {% endblock modal_body %}
             </div>
@@ -23,3 +24,4 @@
         </div>
     </div>
 </div>
+{% block post_modal %}{% endblock post_modal %}
