--- a/hawc/static/css/epa/core/style.css
+++ b/hawc/static/css/epa/core/style.css
@@ -4116,8 +4116,7 @@ dfn {
   right: auto
 }
 
-/* HAWC CHANGES START  */
-/* * {
+* {
   -webkit-transition-duration: 200ms;
   transition-duration: 200ms;
   -webkit-transition-property: background-color, border-color, color, opacity, text-shadow, -webkit-box-shadow, -webkit-transform;
@@ -4126,8 +4125,7 @@ dfn {
   transition-property: background-color, border-color, box-shadow, color, opacity, text-shadow, transform, -webkit-box-shadow, -webkit-transform;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1)
-} */
-/* HAWC CHANGES END  */
+}
 
 @media(prefers-reduced-motion: reduce) {
 
