--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -54,19 +54,20 @@
         {% endif %}
         {% if show_user_tags %}{% for user_tag in ref.user_tags.all %}
         <div class="user-tag box-shadow bg-white px-3 my-3 pb-2 pt-1">
-            <div>
-                {% if conflict_resolution %}
-                <form class="d-inline-block"
-                    hx-post="{% url 'lit:api:reference-resolve-conflict' ref.pk %}">
-                    <button class="approve btn btn-sm btn-success mr-2 align-center">
-                        <i class="fa fa-fw fa-check" aria-hidden="true"></i>&nbsp;Approve
-                    </button>
-                    <input name="user_tag_id" value={{user_tag.pk}} class="hidden">
-                </form>
-                {% endif %}
-                <div class="d-inline-block my-2">
-                    <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}} {{user_tag.is_resolved}}</i> 
+            <div class="d-flex justify-content-between my-2">
+                <div>
+                    {% if conflict_resolution %}
+                        <form class="d-inline-block"
+                            hx-post="{% url 'lit:api:reference-resolve-conflict' ref.pk %}">
+                            <button class="approve btn btn-sm btn-success mr-2 align-center">
+                                <i class="fa fa-fw fa-check" aria-hidden="true"></i>&nbsp;Approve
+                            </button>
+                            <input name="user_tag_id" value={{user_tag.pk}} class="hidden">
+                        </form>
+                    {% endif %}
+                    <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}} </i>
                 </div>
+                <span class="badge badge-secondary align-self-start">{{user_tag.is_resolved|yesno:"Resolved,Unresolved"}}</span>
             </div>
             {% with user_tag.consensus_diff as diff %}
                 {% for tag in ref.tags.all %}
