add dynamicformlisteners to necessary pages

--- a/hawc/apps/animal/templates/animal/endpoint_form.html
+++ b/hawc/apps/animal/templates/animal/endpoint_form.html
@@ -133,6 +133,7 @@
       });
     });
   });
+  window.app.HAWCUtils.dynamicFormListeners();
   </script>
   {% include "common/helptext_popup_js.html" %}
 {% endblock %}
