--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -3,3 +3,9 @@
 {% block content %}
 {% crispy form %}
 {% endblock %}
+
+{% block extrajs %}
+<script>
+    window.app.HAWCUtils.dynamicFormListeners();
+</script>
+{% endblock extrajs %}
