--- a/hawc/apps/study/templates/study/study_form.html
+++ b/hawc/apps/study/templates/study/study_form.html
@@ -21,5 +21,6 @@ using one of these approaches instead:</p>
 $(document).ready(function () {
     document.getElementById("id_short_citation").focus()
 });
+window.app.HAWCUtils.dynamicFormListeners();
 </script>
 {% endblock extrajs %}
