--- a/hawc/apps/udf/templates/udf/modelbinding_detail.html
+++ b/hawc/apps/udf/templates/udf/modelbinding_detail.html
@@ -22,9 +22,11 @@
         <tr>
             <th>Form</th>
             <td>
+                <div id="form-holder">
                 <p><a href="{% url 'udf:udf_detail' object.form.pk %}">{{object.form.name}}</a></p>
                 <p class='my-3'><u>Form Preview:</u></p>
                 {% crispy object.form_instance %}
+                </div>
             </td>
         </tr>
         <tr>
@@ -42,3 +44,10 @@
     </tbody>
 </table>
 {% endblock %}
+
+{% block extrajs %}
+<script>
+    window.app.HAWCUtils.dynamicFormListeners();
+    $('#form-holder').removeClass('hidden');
+</script>
+{% endblock extrajs %}
