--- a/hawc/apps/lit/templates/lit/_bulk_merge_modal_innards.html
+++ b/hawc/apps/lit/templates/lit/_bulk_merge_modal_innards.html
@@ -13,7 +13,7 @@
     {% endif %}
 </div>
 <div class="modal-body pt-0">
-    <div style="width: 48vw;" class="justify-content-center">
+    <div class="justify-content-center">
         {% if form %}
             <div class="pt-2">
             {% crispy form %}
@@ -33,7 +33,7 @@
             <ul class="list-group list-group-flush">
                 {% for ref in object_list %}
                     <li class="list-group-item conflict-reference-li {% if forloop.first %} pb-4 {% else %} py-4 {% endif %}">
-                    {% include 'lit/_reference_with_tags.html' with conflict_resolution=False show_actions=False show_user_tags=True %}
+                    {% include 'lit/_reference_with_tags.html' with conflict_resolution=False show_actions=False show_user_tags=True show_consensus_tag_after=True hide_abstract=True %}
                     </li>
                 {% endfor %}
             </ul>
