--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -35,12 +35,22 @@
         {% endif %}
     </div>
     <div>
-        {% with ref.tags.all as tags %}{% if tags %}
-        <div class="consensus-tag">
-            {% if show_user_tags %}<p class="my-2"><b>Consensus tags:</b></p>{% endif %}
-            {% for tag in tags %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
+        <div class="d-flex">
+            {% with ref.tags.all as tags %}{% if tags or show_consensus_tag_after %}
+            <div class="consensus-tag {% if show_consensus_tag_after %} col-md-6 {% endif %}">
+                {% if show_user_tags %}<p class="my-2"><b>Consensus tags:</b></p>{% endif %}
+                {% for tag in tags %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
+            </div>
+            {% endif %}
+            {% if show_consensus_tag_after %}
+            <div class="consensus-tag col-md-6 border-left">
+                <p class="my-2"><b>Consensus tags after merge:</b></p>
+                {% for tag in tags %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
+                {% for tag in ref.bulk_merge_tag_names %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
         </div>
-        {% endif %}{% endwith %}
         {% if conflict_resolution %}
         <div class="d-flex align-flex-end">
             <form class="ml-auto"
@@ -67,6 +77,7 @@
                     {% endif %}
                     <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}} </i>
                 </div>
+                <span class="badge badge-secondary align-self-start">{{user_tag.is_resolved|yesno:"Resolved,Unresolved"}}</span>
             </div>
             {% with user_tag.consensus_diff as diff %}
                 {% for tag in ref.tags.all %}
