--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -18,7 +18,7 @@
             <a class="dropdown-item" href="{{ object.get_udf_list_url }}">User defined models</a>
             {% endif %}
             <a class="dropdown-item" href="{{ object.get_clear_cache_url }}">Clear assessment cache</a>
-            <a class="dropdown-item" href="{{ object.get_assessment_logs_url }}">Change logs</a>
+            <a class="dropdown-item" href="{{ object.get_assessment_logs_url }}">View change logs</a>
             <a class="dropdown-item" hx-get="{% url 'assessment:attachment-create' object.pk %}" hx-trigger="click" hx-target="#attach_table" hx-swap="outerHTML" href="/">Add an attachment</a>
             <a class="dropdown-item" href="{% url 'assessment:dataset_create' object.pk %}">Add a dataset</a>
             <a class="dropdown-item" href="{% url 'assessment:values-create' object.pk %}">Add a value</a>
