--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -46,7 +46,7 @@
             <div class="consensus-tag col-md-6 border-left">
                 <p class="my-2"><b>Consensus tags after merge:</b></p>
                 {% for tag in tags %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
-                {% for tag in ref.bulk_merge_tag_names %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endfor %}
+                {% for tag in ref.bulk_merge_tag_names %}{% if tag not in tags %}{% include 'lit/_nested_tag.html' with tag=tag extra_classes=extra_tag_classes %}{% endif %}{% endfor %}
             </div>
             {% endif %}
             {% endwith %}
@@ -77,7 +77,9 @@
                     {% endif %}
                     <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}} </i>
                 </div>
+                {% if show_resolved_badge %}
                 <span class="badge badge-secondary align-self-start">{{user_tag.is_resolved|yesno:"Resolved,Unresolved"}}</span>
+                {% endif %}
             </div>
             {% with user_tag.consensus_diff as diff %}
                 {% for tag in ref.tags.all %}
