--- a/hawc/apps/lit/templates/lit/_bulk_merge_modal.html
+++ b/hawc/apps/lit/templates/lit/_bulk_merge_modal.html
@@ -1,6 +1,6 @@
 <form method="post" enctype="multipart/form-data">
 <div id="bulk-merge-modal" class="modal fade" data-backdrop="static" tabindex="-1" aria-labelledby="bulk-merge-modal-label" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-scrollable" role="document">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
         <div id="modal-content" class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="bulk-merge-modal-label">
