--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -160,6 +160,12 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 
+/* Override bootstrap modal width */
+.modal-dialog {
+    min-width: 950px;
+    max-width: 1200px;
+}
+
 .modal-body {
     max-height: 600px;
     overflow-y: auto;
