add description to selector

--- a/hawc/apps/summary/templates/summary/visual_selector.html
+++ b/hawc/apps/summary/templates/summary/visual_selector.html
@@ -154,7 +154,7 @@
     <div id="detail-8" class="col-md-12">
       <h3>Static image</h3>
       <p class="form-text text-muted">
-        TODO.
+        Upload an image to be displayed as a visual. .jpeg, .jpg, and .png files are supported.
       </p>
     </div>
   </div>
